--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,18 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.avatar-small {
+  width: 28px;
+}
+
+.avatar-medium {
+  width: 44px;
+}
+
+.avatar-large {
+  width: 60px;
+}
+
+.avatar-full {
+  width: 100%;
+}
