--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,10 @@
           <li><%= link_to 'Sign up', new_user_registration_path %></li>
         <% else %>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.fullname %><span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <%= current_user.fullname %><span class="caret"></span>
+            <%= image_tag avatar_url(current_user), class: "image-circle avatar-small" %>&nbsp;
+          </a>
             <div class="dropdown-menu">
               <li><a href="#">Your Trips</a></li>
               <li><a href="#">Wish List</a></li>
