--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,17 +1,16 @@
 <div class="row">
-  <div class="col-md-6 col-md offset-3 text-center">
-
-    <h2>Edit <%= resource_name.to_s.humanize %></h2>
-
+  <div class="col-md-6 col-md-offset-3 text-center">
+  
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-      <%= devise_error_messages! %>
+    
+      <%= render 'shared/devisemes' %>
 
       <div class="form-group">
-        <%= f.text_field :fullname, autofocus: true, :placeholder => "Full Name", :class => "form-control" %>
+        <%= f.text_field :fullname, autofocus: true, :placeholder => "Full Name", :class => 'form-control' %>
       </div>
 
       <div class="form-group">
-        <%= f.email_field :email, autofocus: true, :placeholder => "Email", :class => "form-control" %>
+        <%= f.email_field :email, :placeholder => "Email", :class => 'form-control' %>
       </div>
 
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -19,27 +18,21 @@
       <% end %>
 
       <div class="form-group">
-        <%= f.password_field :password, autocomplete: "off", :class => "form-control" %>
+        <%= f.password_field :password, autocomplete: "off", :placeholder => "New Password (leave blank if you don't want to change it)", :class => 'form-control' %>
       </div>
 
       <div class="form-group">
-        <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control" %>
+        <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => "Confirm Password", :class => 'form-control' %>
       </div>
 
       <div class="form-group">
-        <%= f.password_field :current_password, autocomplete: "off", :class => "form-control" %>
+        <%= f.password_field :current_password, autocomplete: "off", :placeholder => "Type current password to confirm your change", :class => 'form-control' %>
       </div>
-
+      
       <div class="actions">
-        <%= f.submit "Update" %>
+        <%= f.submit "Save", :class => "btn btn-primary" %>
       </div>
     <% end %>
 
-    <h3>Cancel my account</h3>
-
-    <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-    <%= link_to "Back", :back %>
-
   </div>
-</div>
+</div>  
