--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,31 +8,35 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">LairBnB</a>
+      <a class="navbar-brand" href="#">AirAlien</a>
     </div>
-
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
+        
         <% if(!user_signed_in?) %>
-          <li><%= link_to 'Log in', new_user_session_path %></li>
-          <li><%= link_to 'Sign up', new_user_registration_path %></li>
+          <li><%= link_to "Log In", new_user_session_path %></li>
+          <li><%= link_to "Sign Up", new_user_registration_path %></li>
         <% else %>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            <%= current_user.fullname %><span class="caret"></span>
-            <%= image_tag avatar_url(current_user), class: "image-circle avatar-small" %>&nbsp;
-          </a>
-            <div class="dropdown-menu">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              <%= image_tag avatar_url(current_user), class: "img-circle avatar-small" %>&nbsp;
+              <%= current_user.fullname %> <span class="caret"></span>
+            </a>
+
+            <ul class="dropdown-menu">
               <li><a href="#">Your Trips</a></li>
-              <li><a href="#">Wish List</a></li>
-              <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
+              <li><a href="#">Wish Lists</a></li>
+              <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">Account</a></li>
-              <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
-            </div>
-        </li>
-        <%end%>
+              <li><a href="#">Account Setting</a></li>
+              <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+            </ul>
+          </li>
+        <% end %>
+
+        
       </ul>
-    </div>
+      
+    </div><!--/.nav-collapse -->
   </div>
 </nav>
