--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,9 +2,9 @@
 @import "bootstrap";
 @import "toastr";
 
-body {
+body {  
   color: #565a5c;
-  background-color: #f8f8f8;
+  background-color: #F8F8F8;
 }
 
 .container {
@@ -12,11 +12,11 @@ body {
 }
 
 .navbar-default {
-  background-color: #fff;
+  background-color: #FFFFFF;
 }
 
 .navbar-default .navbar-brand {
-  color: #ff5a5f;
+  color: #FF5A5F;
   font-size: 2em;
   font-weight: 400;
 }
@@ -33,28 +33,28 @@ body {
 .btn-primary.btn:hover, .btn-primary.btn:focus {
   border-color: #ff7e82;
   border-bottom-color: #fa0008;
-  background-color: #ff7e82;
-  outline: none;
+  background-color: #ff7e82;  
+  outline:none;
 }
 
 .btn-primary.btn:active {
   border-color: #e00007;
-  background-color: #e00007;
-  outline: none;
+  background-color: #e00007;  
+  outline:none;
 }
 
 .btn-default.btn {
   width: 100%;
   border-radius: 2px;
   padding: 10px 0;
-  margin-top: 10px;
+  margin-top: 10px; 
 }
 
 .panel-default .panel-heading {
   color: #565a5c;
   background-color: #edefed;
   font-size: 18px;
-  font-weight: 400;
+  font-weight: 400
 }
 
 .row-space-1 {
@@ -76,7 +76,7 @@ body {
   color: #575757;
   font-size: 15px;
   font-weight: 500;
-  line-height: 25px
+  line-height: 25px;
 }
 
 .avatar-small {
@@ -84,13 +84,50 @@ body {
 }
 
 .avatar-medium {
-  width: 44px;
+  width: 48px;
 }
 
 .avatar-large {
-  width: 120px;
+  width: 68px;
 }
 
 .avatar-full {
   width: 100%;
+}
+
+.form-group {
+  margin-bottom: 25px;
+}
+
+.form-control {
+  border-radius: 2px;
+  height: 4rem;
+}
+
+.sidebar-list {
+  padding-left: 0;
+  list-style: none;
+}
+
+.sidebar-item {
+  padding: 10px 0;
+  font-size: 16px;
+  color: #82888a;
+  border-bottom: 1px solid #CCC;
+}
+
+.sidebar-link {
+  color: #82888a;
+  text-decoration: none;
+}
+
+.sidebar-link:hover, .sidebar-link:focus {
+  color: #cacccd;
+  text-decoration: none;
+}
+
+.active.sidebar-link {
+  color: #565a5c;
+  font-weight: bold;
+  text-decoration: none;
 }
