--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -39,6 +39,10 @@
               <%= f.password_field :password, autocomplete: "off", :placeholder => "New Password (leave blank if you don't want to change it)", :class => 'form-control' %>
             </div>
 
+            <div class="form-group">
+              <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => "Confirm Password", :class => 'form-control' %>
+            </div>
+            
             <div class="actions">
               <%= f.submit "Save", :class => "btn btn-primary" %>
             </div>
