--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,49 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
+<!-- Static navbar -->
 <head>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script> 
   <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
-<body>
-  <nav class="navbar navbar-default navbar-static-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">LairBnB</a>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-          
-          <% if(!user_signed_in?) %>
-            <li><%= link_to "Log In", new_user_session_path %></li>
-            <li><%= link_to "Sign Up", new_user_registration_path %></li>
-          <% else %>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <%= image_tag avatar_url(current_user), class: "img-circle avatar-small" %>&nbsp;
-                <%= current_user.fullname %> <span class="caret"></span>
-              </a>
+<nav class="navbar navbar-default navbar-static-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">AirAlien</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav navbar-right">
+        
+        <% if(!user_signed_in?) %>
+          <li><%= link_to "Log In", new_user_session_path %></li>
+          <li><%= link_to "Sign Up", new_user_registration_path %></li>
+        <% else %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              <%= image_tag avatar_url(current_user), class: "img-circle avatar-small" %>&nbsp;
+              <%= current_user.fullname %> <span class="caret"></span>
+            </a>
 
-              <ul class="dropdown-menu">
-                <li><a href="#">Your Trips</a></li>
-                <li><a href="#">Wish Lists</a></li>
-                <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Account Setting</a></li>
-                <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
-              </ul>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-    </div>   
-  </nav>
-  
-</body>
-</html>
+            <ul class="dropdown-menu">
+              <li><a href="#">Your Trips</a></li>
+              <li><a href="#">Wish Lists</a></li>
+              <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Account Setting</a></li>
+              <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+            </ul>
+          </li>
+        <% end %>
+
+        <li>
+          <a href="#"><i class="fa fa-envelope-o"></i> Messages</a>
+        </li>
+        <li>
+          <a href="#"><i class="fa fa-home fa-lg"></i> Become a Host</a>
+        </li>
+
+        
+      </ul>
+      
+    </div><!--/.nav-collapse -->
+  </div>
+</nav>
+
+
+
