Users can add rooms with room details

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -46,6 +46,9 @@
         <li>
           <a href="#"><i class="fa fa-home fa-lg"></i> Become a Host</a>
         </li>
+        <li>
+          <%= link_to "List a space", new_room_path %>
+        </li>
 
         
       </ul>
