--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -220,3 +220,8 @@ input[type="checkbox"]:checked:before {
 .text-line-through {
   text-decoration: line-through;
 }
+
+#map {
+  width: 100%;
+  height: 400px;
+}
