--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -116,6 +116,35 @@
         </div>
       </div>
 
+      <br><hr>
+
+      <div class="row">
+        <div class="col-md-12">
+          <div id="map"></div>
+
+          <script>
+            function initMap() {
+              var mapDiv = document.getElementById('map');
+              var map = new google.maps.Map(mapDiv, {
+               center: {lat: <%= @room.latitude %>, lng: <%= @room.longitude %>},
+                zoom: 15
+              });
+
+              var marker = new google.maps.Marker({
+                position: {lat: <%= @room.latitude %>, lng: <%= @room.longitude %>},
+                title: "<%= @room.address %>"
+              });
+
+              marker.setMap(map);
+            }
+          </script>
+          <script async defer
+            src="https://maps.googleapis.com/maps/api/js?callback=initMap">
+          </script>
+          
+        </div>
+      </div>
+
       <div class="col-md-4">
         
       </div>
