--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -132,7 +132,7 @@
 
               var marker = new google.maps.Marker({
                 position: {lat: <%= @room.latitude %>, lng: <%= @room.longitude %>},
-                title: "<%= @room.address %>"
+                title: "<%= @room.listing_name %>"
               });
 
               marker.setMap(map);
@@ -143,6 +143,23 @@
           </script>
           
         </div>
+      </div>
+
+      <h3>Listings Nearby</h3>
+      <div class="row">
+        <% for room in @room.nearbys(10) %> 
+          <div class="col-md-4">
+            <div class="panel panel-default">
+              <div class="panel-heading preview">
+                <%= image_tag room.photos[0].image.url(:medium) %>
+              </div>
+              <div class="panel-body">
+                <%= link_to room.listing_name, room %><br>
+                (<%= room.distance.round(2) %> miles away)
+              </div>
+            </div>
+          </div>
+        <% end %>
       </div>
 
       <div class="col-md-4">
