--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -49,15 +49,17 @@
             </div>
           </div>
         </div>
-      </div>
       
+        <div class="col-md-4">
+          <%= render 'reservations/form' %>
+        </div>
+      </div>
       <div class="row">
         <div class="col-md-12">
           <h2>About this Listing</h2>
           <p><%= @room.summary %></p>
         </div>
       </div>
-
       <div class="row">
         <div class="col-md-2">
           <p>Amenities</p>
@@ -160,10 +162,6 @@
             </div>
           </div>
         <% end %>
-      </div>
-
-      <div class="col-md-4">
-        
       </div>
     </div>
   </div>
