--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "toastr";
-@import "jquery.ui.datepicker";
-@import "themes/jquery.ui.smoothness";
 
 body {  
   color: #565a5c;
@@ -10,7 +8,7 @@ body {
 }
 
 .container {
-  width: 80%;
+	width: 80%;
 }
 
 .navbar-default {
@@ -82,19 +80,19 @@ body {
 }
 
 .avatar-small {
-  width: 28px;
+	width: 28px;
 }
 
 .avatar-medium {
-  width: 48px;
+	width: 48px;
 }
 
 .avatar-large {
-  width: 68px;
+	width: 68px;
 }
 
 .avatar-full {
-  width: 100%;
+	width: 100%;
 }
 
 .form-group {
@@ -186,44 +184,45 @@ input[type="checkbox"]:checked:before {
 }
 
 .btn-file {
-  position: relative;
-  overflow: hidden;
+    position: relative;
+    overflow: hidden;
 }
 
 .btn-file input[type=file] {
-  position: absolute;
-  top: 0;
-  right: 0;
-  min-width: 100%;
-  min-height: 100%;
-  font-size: 100px;
-  text-align: right;
-  filter: alpha(opacity=0);
-  opacity: 0;
-  outline: none;
-  background: white;
-  cursor: inherit;
-  display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
 }
 
 .panel-heading.preview {
   padding: 0;
 }
 
-.panel-heading.preview img {
+.panel-heading.preview img{  
   width: 100%;
 }
 
 .amenities li {
   margin-bottom: 10px;
-  list-style-type: none; 
+  list-style-type: none;
 }
 
 .text-line-through {
-  text-decoration: line-through;
+  text-decoration: line-through
 }
 
-#map {
+.reservation-table td {
   width: 100%;
-  height: 400px;
+  border: 1px solid #dce0e0;
+  padding: 10px;
 }
