--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,11 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3 text-center">
-
-    <%= link_to "Sign In with Facebook", user_facebook_omniauth_authorize_path, class: "btn btn-primary"%>
+    
+    <%= link_to "Sign In with Facebook", user_omniauth_authorize_path(:facebook), class: "btn btn-primary" %>
     
     <h2>Sign up</h2>
-  
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render 'shared/devisemes' %>
 
       <div class="form-group">        
