--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -1,6 +1,13 @@
 <%= form_for([@room, @room.reservations.new]) do |f| %>
 
 	<div class="row">
+		<div class="col-md-12 price_tag">
+			<span>$<%= @room.price %></span>
+			<spane class="pull-right">Per Night</spane>
+		</div>
+	</div>
+
+	<div class="row">
 		<div class="col-md-6">
 			<label>Check In</label>
 			<%= f.text_field :start_date, readonly: 'true', placeholder: 'Start Date', class: 'form-control' %>		
@@ -26,7 +33,7 @@
 				</tr>
 				<tr>
 					<td>Total</td>
-					<td><span id="reservation_sum"></span></td>
+					<td>$<span id="reservation_sum"></span></td>
 				</tr>
 			</tbody>
 		</table>
@@ -69,18 +76,10 @@
 					onSelect: function(selected) {
 						$('#reservation_end_date').datepicker("option", "minDate", selected);
 						$('#reservation_end_date').attr('disabled', false);
-					}
-				});
 
-				$('#reservation_end_date').datepicker({
-					dateFormat: 'dd-mm-yy',
-					minDate: 0,
-					maxDate: '3m',
-					beforeShowDay: unavailable,
-					onSelect: function(selected) {
-						$('#reservation_start_date').datepicker("option", "maxDate", selected);
-						var start_date = $('#reservation_start_date').datepicker('getDate');
-						var end_date = $(this).datepicker('getDate');
+						var start_date = $(this).datepicker('getDate');
+						var end_date = $('#reservation_end_date').datepicker('getDate');
+						var days = (end_date - start_date)/1000/60/60/24 + 1
 						var input = {
 							'start_date': start_date, 
 							'end_date': end_date,
@@ -95,9 +94,51 @@
 									$('#preview').hide();
 									$('#btn-book').attr('disabled', true);
 								} else {
-									$('#message').text("This date range is  available to rent.");
 									$('#preview').show();
 									$('#btn-book').attr('disabled', false);
+
+									var total = days * <%= @room.price %> 
+									$('#reservation_days').text(days);
+									$('#reservation_sum').text(total);
+									$('#reservation_total').val(total);
+								}
+							}
+						});
+					}
+				});
+
+				$('#reservation_end_date').datepicker({
+					dateFormat: 'dd-mm-yy',
+					minDate: 0,
+					maxDate: '3m',
+					beforeShowDay: unavailable,
+					onSelect: function(selected) {
+						$('#reservation_start_date').datepicker("option", "maxDate", selected);
+						
+						var start_date = $('#reservation_start_date').datepicker('getDate');
+						var end_date = $(this).datepicker('getDate');
+						var days = (end_date - start_date)/1000/60/60/24 + 1
+						var input = {
+							'start_date': start_date, 
+							'end_date': end_date,
+							'room_id': <%= @room.id %>
+						}
+						$.ajax({
+							url: "/preview",
+							data: input, 
+							success: function(data) {
+								if (data.conflict) {
+									$('#message').text("This date range is not available.");
+									$('#preview').hide();
+									$('#btn-book').attr('disabled', true);
+								} else {
+									$('#preview').show();
+									$('#btn-book').attr('disabled', false);
+
+									var total = days * <%= @room.price %> 
+									$('#reservation_days').text(days);
+									$('#reservation_sum').text(total);
+									$('#reservation_total').val(total);
 								}
 							}
 						});
