Minor logic and styling changes to chat fuunctionality (e.g. user cannot chat with themselves)

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -170,7 +170,7 @@
 		</div>
 
 		<!-- Close by Rooms -->
-		<h3>Near by</h3>
+		<h3>Nearby Properties</h3>
 		<div class="row">
 			<% for room in @room.nearbys(10) %>
 				
