--- a/app/views/reviews/_list.html.erb
+++ b/app/views/reviews/_list.html.erb
@@ -1,5 +1,5 @@
 <% if @reviews.count == 0 %>
-  <div class="text-center"><h4>There are no reviews for this property yet!</h4></div>
+  <div class="text-center"><h4>There are no reviews yet!</h4></div>
 <% else %>
 
   <% @reviews.order("id desc").each do |r| %>
@@ -11,7 +11,7 @@
       </div>
       <div class="col-md-11">
         <div>
-          <strong><%= r.user.fullname %> <%= r.star %> </strong>
+          <strong><%= r.user.fullname %> <div id="stars_<%= r.id %>"></div> </strong>
           <span class="pull-right">
             <%= link_to "Remove My Review", [@room, r], method: :delete, data: {confirm: "Are you sure?"} if current_user && current_user == r.user %>
           </span>
@@ -21,6 +21,16 @@
         <div><%= r.comment %></div>
       </div>
     </div>
+
+    <script>
+      $('#stars_<%= r.id %>').raty({
+        path: '/assets',
+        readOnly: true,
+        score: <%= r.star %>
+      });
+    </script>
+
   <% end %>
 
 <% end %>
+
