--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -137,7 +137,7 @@
 				<h3>Reviews </h3>
 					<h4>
 						<span id="average_rating"></span> 
-						(<%= @reviews.count %> <%= @reviews.count > 1 ? "reviews" : "review" %> so far)
+						(<%= @reviews.count %> <%= @reviews.count != 1 ? "reviews" : "review" %> so far)
 					</h4>
 				<div class="container">
 					<div>
