--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,20 @@
+<%= form_tag search_path, method: :get do %>
+  <div class="row">
+    <div class="col-md-6">
+      <%= text_field_tag :search, params[:search], placeholder: "Where are you going?", class: "form-control" %>
+    </div>
+    <div class="col-md-2">
+      <%= text_field_tag :start_date, params[:start_date], placeholder: "Check in", class: "form-control" %>
+    </div>
+    <div class="col-md-2">
+      <%= text_field_tag :end_date, params[:end_date], placeholder: "Check out", class: "form-control" %>
+    </div>
+    <div class="col-md-2">
+      <%= submit_tag "Search", class: "btn btn-primary" %>
+    </div>
+  </div>
+<% end %>
+
 <div class="row">
   <% @rooms.each do |room| %> 
     <div class="col-md-4">
@@ -12,3 +29,25 @@
     </div>
   <% end %> 
 </div>  
+
+<script> 
+  $(function() {
+    $('#start_date').datepicker({
+      dateFormat: 'dd-mm-yy',
+      minDate: 0,
+      maxDate: '3m',
+      onSelect: function(selected) {
+        $('#end_date').datepicker("option", "minDate", selected); 
+        $("#end_date").attr('disabled', false);
+      }
+    });
+    $('#end_date').datepicker({
+      dateFormat: 'dd-mm-yy',
+      minDate: 0,
+      maxDate: '3m',
+      onSelect: function(selected) {
+        $('#start_date').datepicker("option", "maxDate", selected); 
+      }
+    });
+  });
+</script> 
