--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,10 +4,10 @@
       <%= text_field_tag :search, params[:search], placeholder: "Where are you going?", class: "form-control" %>
     </div>
     <div class="col-md-2">
-      <%= text_field_tag :start_date, params[:start_date], placeholder: "Check in", class: "form-control" %>
+      <%= text_field_tag :start_date, params[:start_date], placeholder: "Start Date", class: "form-control" %>
     </div>
     <div class="col-md-2">
-      <%= text_field_tag :end_date, params[:end_date], placeholder: "Check out", class: "form-control" %>
+      <%= text_field_tag :end_date, params[:end_date], placeholder: "End Date", class: "form-control" %>
     </div>
     <div class="col-md-2">
       <%= submit_tag "Search", class: "btn btn-primary" %>
@@ -15,8 +15,11 @@
   </div>
 <% end %>
 
+<br>
+
 <div class="row">
-  <% @rooms.each do |room| %> 
+  <% @rooms.each do |room| %>
+    
     <div class="col-md-4">
       <div class="panel panel-default">
         <div class="panel-heading preview">
@@ -27,27 +30,31 @@
         </div>
       </div>
     </div>
-  <% end %> 
-</div>  
 
-<script> 
+  <% end %>
+</div>
+
+<script>
   $(function() {
-    $('#start_date').datepicker({
+    $("#start_date").datepicker({
       dateFormat: 'dd-mm-yy',
       minDate: 0,
       maxDate: '3m',
       onSelect: function(selected) {
-        $('#end_date').datepicker("option", "minDate", selected); 
-        $("#end_date").attr('disabled', false);
+        $('#end_date').datepicker("option", "minDate", selected);
+        $('#end_date').attr('disabled', false);
       }
     });
-    $('#end_date').datepicker({
+
+    $("#end_date").datepicker({
       dateFormat: 'dd-mm-yy',
       minDate: 0,
       maxDate: '3m',
       onSelect: function(selected) {
-        $('#start_date').datepicker("option", "maxDate", selected); 
+        $('#start_date').datepicker("option", "maxDate", selected);
       }
     });
-  });
-</script> 
+  })
+
+
+</script>
