--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,6 +17,54 @@
 
 <br>
 
+<div class="text-center">
+  <h2>Weekenders</h2>
+  <p>Discover new, inspiring places close to home.</p>
+</div>
+
+<div class="row">
+  <div class="col-md-4 col-sm-12">
+    <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=new+york">
+    <div class="discovery-card" style="background-image: url('/assets/New_York.jpg')">
+      <div class="va-container">
+        <div class="va-middle text-center">
+          <h2><strong>New York</strong></h2>
+        </div> 
+      </div>
+    </div>
+    </a>
+  </div>
+  <div class="col-md-4 col-sm-6">
+    <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=berlin">
+    <div class="discovery-card" style="background-image: url('/assets/Berlin.jpg')">
+      <div class="va-container">
+        <div class="va-middle text-center">
+          <h2><strong>Berlin</strong></h2>
+        </div> 
+      </div>
+    </div>
+    </a>
+  </div>
+  <div class="col-md-4 col-sm-6">
+    <div class="discovery-card" style="background-image: url('/assets/Tokyo.jpg')">
+      <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=tokyo">
+      <div class="va-container">
+        <div class="va-middle text-center">
+          <h2><strong>Tokyo</strong></h2>
+        </div> 
+      </div>
+    </div>
+    </a>
+  </div>
+</div>
+
+<br>
+
+<div class="text-center">
+  <h2>Explore the world</h2>
+  <p>Find rooms all over the world.</p>
+</div>
+
 <div class="row">
   <% @rooms.each do |room| %>
     
@@ -26,6 +74,7 @@
           <%= image_tag room.photos[0].image.url(:medium) if room.photos.length > 0 %>
         </div>
         <div class="panel-body">
+          <%= image_tag avatar_url(room.user), class: "img-circle avatar-small" %>&nbsp;
           <%= link_to room.listing_name, room %>
         </div>
       </div>
