Fixed front page layouts and Google Maps key

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -163,7 +163,7 @@
 		      }
 		    </style>
 
-		    <script src="https://maps.googleapis.com/maps/api/js"></script>
+		    <script src="https://maps.googleapis.com/maps/api/js?key= AIzaSyD_VHhHR9nE7lmy2VuL3HXQZ3w0oyc30mg"></script>
 		    <script>
 		      function initialize() {
 		        var mapCanvas = document.getElementById('map');
