--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -287,3 +287,13 @@ input[type="checkbox"]:checked:before {
   display: table-cell;
 }
 
+.va-middle:hover {
+  color: #ff5a5f;
+}
+
+a, a:hover {
+  text-decoration: none;
+}
+
+
+
