--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,8 +24,8 @@
 
 <div class="row">
   <div class="col-md-4 col-sm-12">
-    <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=new+york">
-    <div class="discovery-card" style="background-image: url('/assets/New_York.jpg')">
+    <a href="http://bs-airbnb/search?utf8=%E2%9C%93&search=new+york">
+    <div class="discovery-card" style="background-image: url('https://s3-us-west-1.amazonaws.com/bs-airbnb/New_York.jpg')">
       <div class="va-container">
         <div class="va-middle text-center">
           <h2><strong>New York</strong></h2>
@@ -35,8 +35,8 @@
     </a>
   </div>
   <div class="col-md-4 col-sm-6">
-    <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=berlin">
-    <div class="discovery-card" style="background-image: url('/assets/Berlin.jpg')">
+    <a href="http://bs-airbnb/search?utf8=%E2%9C%93&search=berlin">
+    <div class="discovery-card" style="background-image: url('https://s3-us-west-1.amazonaws.com/bs-airbnb/Berlin.jpg')">
       <div class="va-container">
         <div class="va-middle text-center">
           <h2><strong>Berlin</strong></h2>
@@ -46,8 +46,8 @@
     </a>
   </div>
   <div class="col-md-4 col-sm-6">
-    <div class="discovery-card" style="background-image: url('/assets/Tokyo.jpg')">
-      <a href="http://localhost:3000/search?utf8=%E2%9C%93&search=tokyo">
+    <div class="discovery-card" style="background-image: url('https://s3-us-west-1.amazonaws.com/bs-airbnb/Tokyo.jpg')">
+      <a href="http://bs-airbnb/search?utf8=%E2%9C%93&search=tokyo">
       <div class="va-container">
         <div class="va-middle text-center">
           <h2><strong>Tokyo</strong></h2>
