--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -3,7 +3,7 @@
   <div id="sidebar">
     <div id="widget" class="sticky">
 
-      <script src="https://maps.googleapis.com/maps/api/js"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key= AIzaSyD_VHhHR9nE7lmy2VuL3HXQZ3w0oyc30mg "></script>
       <script>
         function initialize() {
           var mapCanvas = document.getElementById('widget');
