--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,7 @@
 
 <div class="row">
   <div class="col-md-4 col-sm-12">
-    <a href="http://bs-airbnb/search?utf8=%E2%9C%93&search=new+york">
+    <a href="http://bs-airbnb.herokuapp.com/search?utf8=%E2%9C%93&search=new+york">
     <div class="discovery-card" style="background-image: url('https://s3-us-west-1.amazonaws.com/bs-airbnb/New_York.jpg')">
       <div class="va-container">
         <div class="va-middle text-center">
@@ -35,7 +35,7 @@
     </a>
   </div>
   <div class="col-md-4 col-sm-6">
-    <a href="http://bs-airbnb/search?utf8=%E2%9C%93&search=berlin">
+    <a href="http://bs-airbnb.herokuapp.com/search?utf8=%E2%9C%93&search=berlin">
     <div class="discovery-card" style="background-image: url('https://s3-us-west-1.amazonaws.com/bs-airbnb/Berlin.jpg')">
       <div class="va-container">
         <div class="va-middle text-center">
@@ -46,7 +46,7 @@
     </a>
   </div>
   <div class="col-md-4 col-sm-6">
-    <div class="discovery-card" style="background-image: url('https://s3-us-west-1.amazonaws.com/bs-airbnb/Tokyo.jpg')">
+    <div class="discovery-card" style="background-image: url('https://s3-us-west-1.amazonaws.com/bs-airbnb.herokuapp.com/Tokyo.jpg')">
       <a href="http://bs-airbnb/search?utf8=%E2%9C%93&search=tokyo">
       <div class="va-container">
         <div class="va-middle text-center">
