--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -46,8 +46,8 @@
     </a>
   </div>
   <div class="col-md-4 col-sm-6">
-    <div class="discovery-card" style="background-image: url('https://s3-us-west-1.amazonaws.com/bs-airbnb.herokuapp.com/Tokyo.jpg')">
-      <a href="http://bs-airbnb/search?utf8=%E2%9C%93&search=tokyo">
+    <a href="http://bs-airbnb.herokuapp.com/search?utf8=%E2%9C%93&search=tokyo">
+    <div class="discovery-card" style="background-image: url('https://s3-us-west-1.amazonaws.com/bs-airbnb/Tokyo.jpg')">
       <div class="va-container">
         <div class="va-middle text-center">
           <h2><strong>Tokyo</strong></h2>
