--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,7 +25,7 @@
 <div class="row">
   <div class="col-md-4 col-sm-12">
     <a href="http://bs-airbnb.herokuapp.com/search?utf8=%E2%9C%93&search=new+york">
-    <div class="discovery-card" style="background-image: url('https://s3-us-west-1.amazonaws.com/bs-airbnb/New_York.jpg')">
+    <div class="discovery-card" style="background-image: url('https://s3-us-west-1.amazonaws.com/bs-lairbnb/New_York.jpg')">
       <div class="va-container">
         <div class="va-middle text-center">
           <h2><strong>New York</strong></h2>
@@ -36,7 +36,7 @@
   </div>
   <div class="col-md-4 col-sm-6">
     <a href="http://bs-airbnb.herokuapp.com/search?utf8=%E2%9C%93&search=berlin">
-    <div class="discovery-card" style="background-image: url('https://s3-us-west-1.amazonaws.com/bs-airbnb/Berlin.jpg')">
+    <div class="discovery-card" style="background-image: url('https://s3-us-west-1.amazonaws.com/bs-lairbnb/Berlin.jpg')">
       <div class="va-container">
         <div class="va-middle text-center">
           <h2><strong>Berlin</strong></h2>
@@ -47,7 +47,7 @@
   </div>
   <div class="col-md-4 col-sm-6">
     <a href="http://bs-airbnb.herokuapp.com/search?utf8=%E2%9C%93&search=tokyo">
-    <div class="discovery-card" style="background-image: url('https://s3-us-west-1.amazonaws.com/bs-airbnb/Tokyo.jpg')">
+    <div class="discovery-card" style="background-image: url('https://s3-us-west-1.amazonaws.com/bs-lairbnb/Tokyo.jpg')">
       <div class="va-container">
         <div class="va-middle text-center">
           <h2><strong>Tokyo</strong></h2>
