--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -110,7 +110,7 @@
 				    <% if @photos %>				
 							<% @photos.each do |photo| %>
 								<div class="item <%= 'active' if photo.id == @photos[0].id %>">          
-				          <%= image_tag photo.image.url() %>
+				          <%= image_tag photo.image.url(:medium) %>
 				        </div>
 							<% end %>	
 						<% end %>
