Corrected PayPal redirect and reservations menu in reservations controller

--- a/app/views/reservations/your_reservations.html.erb
+++ b/app/views/reservations/your_reservations.html.erb
@@ -36,7 +36,7 @@
                 </div>  
               </div>
               <hr>
-            <% %>
+            <% end %>
           <% end %>
         <% end %>
 
